created URL model and migration

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,9 @@
-<h1>Deaf Aunty</h1>
+<h1>URL Shortener</h1>
 
-<p>Say something to Aunty</p>
+<p>Input URL link to shorten.</p>
 
-<form action="/aunty" method="post">
-  <input type="text" name="user_input">
-  <input type="submit" value="Say It!">
-</form>
-
-<p>URL parameters:</p>
-<%= params %>
+<form action="#" method="">
+    Enter URL: 
+    <input type ="text" name="long_url">
+    <input type="submit" value="Submit">
+ </form>
