added validation for url format

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,6 +11,6 @@
  <p> list of current URLs shortened </p>
  <% @list.each do |x| %> <!-- Or whatever variable you would like to pass -->
     <p>Original Url: <a href="<%= x[0] %>"><%= x[0] %></a></p>
-    <p>Short Url: <a href="<%= x[1]%>"><%= x[1]%></a></p>
+    <p>Short Url: <a href="<%= x[1]%>">http://127.0.0.1:9393/<%= x[1]%></a></p>
     <p>Click Count: <%= x[2]%></p>
  <% end %>
